<resources>
    <string name="app_name">당구 데이터</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">당신은 당구의 세계에 오셨군요!</string>
    <string name="main_button_billiardInput">당구 데이터 입력</string>
    <string name="main_button_billiardDisplay">당구 데이터 보기</string>
    <string name="main_button_userManager">나의 정보</string>
    <string name="main_button_statisticsManager">통계</string>
    <string name="main_button_appSetting">설정</string>
    <string name="main_button_appInfo">어플 정보</string>
    <string name="main_footer">Developed by JDI ⓒ 2020 skymanlab.</string>
    <string name="main_dialog_userRegisterCheck_title">사용자 등록을 하겠습니까?</string>
    <string name="main_dialog_userRegisterCheck_message">먼저 사용자 등록을 해주세요. 사용자 등록을 위해 해당 화면으로 이동합니다.</string>
    <string name="main_dialog_userRegisterCheck_positive">이동</string>
    <string name="main_dialog_userRegisterCheck_negative">취소</string>
    <string name="main_dialog_friendRegisterCheck_title">친구 등록을 하겠습니까?</string>
    <string name="main_dialog_friendRegisterCheck_message">먼저 게임을 함께할 친구를 등록해주세요. 친구 등록을 위해 해당 화면으로 이동합니다.</string>
    <string name="main_dialog_friendRegisterCheck_positive">이동</string>
    <string name="main_dialog_friendRegisterCheck_negative">취소</string>
    <string name="main_dialog_playerChoiceInGame_title">친구 목록</string>
    <string name="main_dialog_playerChoiceInGame_positive">게임 시작</string>
    <string name="main_dialog_playerChoiceInGame_negative">취소</string>
    <string name="main_noticeUser_choicePlayer">1명이상은 선택해주세요.</string>
    <string name="main_adMob_test"></string>
    <string name="main_"></string>
    <string name="billiardInput_title">당구 데이터 입력</string>
    <string name="billiardInput_playerSection_Name">### 님</string>
    <string name="billiardInput_playerSection_targetScore">수지</string>
    <string name="billiardInput_playerSection_score">점수</string>
    <string name="billiardInput_billiardSection_gameMode">종목</string>
    <string name="billiardInput_billiardSection_date">날짜</string>
    <string name="billiardInput_billiardSection_date_content">날짜 데이터를 셋팅 중입니다.</string>
    <string name="billiardInput_billiardSection_date_button_re">변경</string>
    <string name="billiardInput_billiardSection_winner">승자</string>
    <string name="billiardInput_billiardSection_playTime">경기시간</string>
    <string name="billiardInput_billiardSection_playTime_unit">분</string>
    <string name="billiardInput_billiardSection_cost">가격</string>
    <string name="billiardInput_billiardSection_cost_hint">마지막 경기가 아니면 0원을 입력하세요. 그리고 마지막 경기에 금액을 입력해주세요.</string>
    <string name="billiardInput_billiardSection_cost_unit">원</string>
    <string name="billiardInput_billiardSection_button_save">저장</string>
    <string name="billiardInput_dialog_saveData_title">저장하시겠습니까?</string>
    <string name="billiardInput_dialog_saveData_message">입력된 내용을 저장합니다.</string>
    <string name="billiardInput_dialog_saveData_positive">저장</string>
    <string name="billiardInput_dialog_saveData_negative">취소</string>
    <string name="billiardInput_dialog_nextActivityMove_title">화면 이동</string>
    <string name="billiardInput_dialog_nextActivityMove_message">다음 화면으로 이동합니다.</string>
    <string name="billiardInput_dialog_nextActivityMove_positive">다음 화면</string>
    <string name="billiardInput_noticeUser_playerDataCheck">플레이어의 데이터를 모두 입력해주세요.</string>
    <string name="billiardInput_noticeUser_billiardDataCheck">당구 데이터를 모두 입력해주세요.</string>
    <string name="billiardInput_noticeUser_scoreRangeCheck">플레이어의 점수는 수지보다 작은 값을 입력해주세요.</string>
    <string name="billiardInput_noticeUser_winnerScoreCheck">승리자는 수지와 점수가 같아야 합니다.</string>
    <string name="billiardInput_noticeUser_inputDataCheck_playTimeAndCost">경기시간과 비용은 0보다 큰 값을 입력해주세요.</string>
    <string name="billiardInput_noticeUser_inputDataCheck_playTime">경기시간은 0보다 큰 값을 입력해주세요.</string>
    <string name="billiardInput_noticeUser_saveComplete">저장이 완료되었습니다.</string>
    <string name="billiardModify_title">당구 데이터 수정</string>
    <string name="billiardModify_count">번호</string>
    <string name="billiardModify_date">날짜</string>
    <string name="billiardModify_gameMode">종목</string>
    <string name="billiardModify_playerCount">참가인원</string>
    <string name="billiardModify_winnerId">승리자 ID</string>
    <string name="billiardModify_winnerName">승리자 이름</string>
    <string name="billiardModify_playTime">게임 시간</string>
    <string name="billiardModify_playTime_unit">분</string>
    <string name="billiardModify_playerSection">플레이어</string>
    <string name="billiardModify_playerSection_playerName">player name</string>
    <string name="billiardModify_playerSection_targetScore">수지</string>
    <string name="billiardModify_playerSection_score">점수</string>
    <string name="billiardModify_cost">비용</string>
    <string name="billiardModify_cost_unit">원</string>
    <string name="billiardModify_button_modify">수정</string>
    <string name="billiardModify_button_delete">삭제</string>
    <string name="billiardModify_button_cancel">취소</string>
    <string name="billiardModify_noticeUser_noChangedData">변경된 데이터가 없습니다.</string>
    <string name="billiardModify_dialog_modifyData_title">수정하시겠습니까?</string>
    <string name="billiardModify_dialog_modifyData_message">수정된 내용을 저장합니다.</string>
    <string name="billiardModify_dialog_modifyData_positive">수정</string>
    <string name="billiardModify_dialog_modifyData_negative">취소</string>
    <string name="billiardModify_dialog_deleteData_title">삭제하시겠습니까?</string>
    <string name="billiardModify_dialog_deleteData_message">게임 내용을 삭제합니다. 모든 내용이 삭제되므로 주위해주세요.</string>
    <string name="billiardModify_dialog_deleteData_positive">삭제</string>
    <string name="billiardModify_dialog_deleteData_negative">취소</string>
    <string name="billiardDisplay_title">당구 데이터 보기</string>
    <string name="billiardDisplay_listView_title">목록 ▼</string>
    <string name="billiardDisplay_listView_explain_1">번호를 클릭하면 수정할 수 있습니다.</string>
    <string name="billiardDisplay_listView_explain_2">참가자 수를 클릭하면 참가자에 대한 정보를 확인할 수 있습니다</string>
    <string name="billiardDisplay_button_delete">모든 내용 삭제</string>
    <string name="billiardDisplay_dialog_allDataDelete_title">삭제하시겠습니까?</string>
    <string name="billiardDisplay_dialog_allDataDelete_message">저장되었던 게임에 대한 내용이 모두 삭제됩니다.</string>
    <string name="billiardDisplay_dialog_allDataDelete_positive">삭제</string>
    <string name="billiardDisplay_dialog_allDataDelete_negative">취소</string>
    <string name="billiardDisplay_noticeUser_noData">저장된 데이터가 없습니다.</string>
    <string name="billiardDisplay_menu1_billiardLvExplain">사용자 설명</string>
    <string name="billiardDisplay_"></string>
    <string name="userManager_title">나의 정보</string>
    <string name="userManager_tabLayout_userInput">기본 정보 입력</string>
    <string name="userManager_tabLayout_userInfo">정보 보기</string>
    <string name="userManager_tabLayout_userFriend">친구 목록</string>
    <string name="statisticsManager_title">통계</string>
    <string name="statisticsManager_tabLayout_calendar">달력</string>
    <string name="statisticsManager_tabLayout_monthStatistics">차트</string>
    <string name="appInfo_title">어플리케이션 정보</string>
    <string name="appInfo_appName">어플이름</string>
    <string name="appInfo_appName_content">당구 데이터</string>
    <string name="appInfo_developerGroup">개발자 그룹</string>
    <string name="appInfo_developerGroup_content">skymanlab.</string>
    <string name="appInfo_developer">개발자</string>
    <string name="appInfo_developer_content">장동익</string>
    <string name="appInfo_version">버전</string>
    <string name="appInfo_version_content">ⓥ 1.0.0</string>
    <string name="appInfo_blog_1">블로그 1</string>
    <string name="appInfo_blog_1_content">https://skymanlab.blogspot.com</string>
    <string name="appInfo_blog_2">블로그 2</string>
    <string name="appInfo_blog_2_content">https://blog.naver.com/skyman13</string>
    <string name="appInfo_secondSite">GitHub</string>
    <string name="appInfo_secondSite_content">https://github.com/skymanlab</string>
    <string name="appInfo_button_adMob">광고보기</string>
    <string name="appInfo_noticeUser_didNotLoadFullAd">광고가 로드되지 않았습니다.</string>
    <string name="appInfo_noticeUser_loadFullAd">광고가 로드되었습니다.</string>
    <string name="appInfo_noticeUser_errorAdMob">오류가 발생하였습니다.</string>
    <string name="appInfo_adMob_smartBanner_testId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appInfo_adMob_smartBanner_realId">ca-app-pub-9668325238172702/4067162315</string>
    <string name="appInfo_"></string>
    <string name="appSetting_title">설정</string>
    <string name="appSetting_dataBackUp">데이터 백업</string>
    <string name="appSetting_dataBackUp_export">내보내기</string>
    <string name="appSetting_dataBackUp_export_noticeUser_success">내보내기 성공</string>
    <string name="appSetting_dataBackUp_export_noticeUser_error">오류가 발생하였습니다.</string>
    <string name="appSetting_dataBackUp_export_noticeUser_noData">저장할 데이터가 없습니다.</string>
    <string name="appSetting_dataBackUp_export_explanation">데이터베이스 -> file</string>
    <string name="appSetting_dataBackUp_import">가져오기</string>
    <string name="appSetting_dataBackUp_import_explanation">file -> 데이터베이스</string>
    <string name="appSetting_dataBackUp_import_noticeUser_success">가져오기 성공</string>
    <string name="appSetting_dataBackUp_import_noticeUser_error">오류가 발생하였습니다.</string>
    <string name="appSetting_dataBackUp_import_noticeUser_noImport">사용자가 등록되어 있어 수행할 수 없습니다.</string>
    <string name="appSetting_"></string>
    <string name="F_userInput_title">기본 정보를 입력해주세요.</string>
    <string name="F_userInput_name">이름</string>
    <string name="F_userInput_name_hint">이름이 뭐예요?</string>
    <string name="F_userInput_targetScore">수지</string>
    <string name="F_userInput_targetScore_hint">수지는 얼마예요?</string>
    <string name="F_userInput_speciality">주 종목</string>
    <string name="F_userInput_speciality_threeCushion">3구</string>
    <string name="F_userInput_speciality_fourBall">4구</string>
    <string name="F_userInput_speciality_pocketBall">포켓볼</string>
    <string name="F_userInput_button_save">저장</string>
    <string name="F_userInput_button_modify">수정</string>
    <string name="F_userInput_button_delete">삭제</string>
    <string name="F_userInput_dialog_saveCheck_title">저장하시겠습니까?</string>
    <string name="F_userInput_dialog_saveCheck_message">입력된 내용을 저장합니다.</string>
    <string name="F_userInput_dialog_saveCheck_positive">저장</string>
    <string name="F_userInput_dialog_saveCheck_negative">취소</string>
    <string name="F_userInput_dialog_modifyCheck_title">수정하시겠습니까?</string>
    <string name="F_userInput_dialog_modifyCheck_message">수정된 내용을 저장합니다.</string>
    <string name="F_userInput_dialog_modifyCheck_positive">확인</string>
    <string name="F_userInput_dialog_modifyCheck_negative">취소</string>
    <string name="F_userInput_dialog_deleteCheck_title">삭제하시겠습니까?</string>
    <string name="F_userInput_dialog_deleteCheck_message">사용자의 데이터와 관련된 모든 데이터를 삭제합니다. 모든 데이터가 삭제되므로 주의해주세요.</string>
    <string name="F_userInput_dialog_deleteCheck_positive">확인</string>
    <string name="F_userInput_dialog_deleteCheck_negative">취소</string>
    <string name="F_userInput_noticeUser_save_success">저장 성공</string>
    <string name="F_userInput_noticeUser_save_fail">저장 실패</string>
    <string name="F_userInput_noticeUser_modify_success">수정 성공</string>
    <string name="F_userInput_noticeUser_modify_fail">수정 실패</string>
    <string name="F_userInput_noticeUser_delete_success">삭제 성공</string>
    <string name="F_userInput_noticeUser_delete_fail">삭제 실패</string>
    <string name="F_userInput_noticeUser_checkInputAllData">모두 입력해주세요.</string>
    <string name="F_userInput_noticeUser_checkRangeTargetScore">수지는 0 에서 50 사이의 값을 입력해주세요.</string>
    <string name="F_userInput_noticeUser_"></string>
    <string name="F_userInput_"></string>
    <string name="F_userInfo_title">나의 정보를 확인합니다.</string>
    <string name="F_userInfo_id">아이디</string>
</resources>