<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.user.UserInputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/F_userInput_title"
                android:textAlignment="center" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- name -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundSecond"
                        android:orientation="horizontal"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/F_userInput_name"
                            android:textColor="@android:color/black" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="12dp"
                            android:background="@android:color/black" />

                        <EditText
                            android:id="@+id/F_userInput_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/F_userInput_name_hint"
                            android:inputType="text"
                            android:singleLine="true" />
                    </LinearLayout><!-- End of name -->

                    <!-- targetScore -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundThird"
                        android:orientation="horizontal"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/F_userInput_targetScore"
                            android:textColor="@android:color/black" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="12dp"
                            android:background="@android:color/black" />

                        <EditText
                            android:id="@+id/F_userInput_targetScore"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/F_userInput_targetScore_hint"
                            android:inputType="numberDecimal"
                            android:singleLine="true" />
                    </LinearLayout><!-- End of targetScore -->

                    <!-- speciality -->
                    <LinearLayout
                        android:id="@+id/userdata_speciality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundSecond"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/F_userInput_speciality"
                            android:textColor="@android:color/black" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@android:color/black" />

                        <RadioGroup
                            android:id="@+id/F_userInput_speciality"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/F_userInput_speciality_threeCushion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/F_userInput_speciality_threeCushion" />

                            <RadioButton
                                android:id="@+id/F_userInput_speciality_fourBall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/F_userInput_speciality_fourBall" />

                            <RadioButton
                                android:id="@+id/F_userInput_speciality_pocketBall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/F_userInput_speciality_pocketBall" />
                        </RadioGroup>
                    </LinearLayout><!-- End of speciality -->

                    <!-- content 4. input data button-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundThird"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/F_userInput_button_save"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/F_userInput_button_save"
                            android:textColor="@color/colorTextPrimary"
                            app:backgroundTint="@color/colorBackgroundPrimary" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/F_userInput_button_modify"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/F_userInput_button_modify"
                            android:textColor="@color/colorTextPrimary"
                            app:backgroundTint="@color/colorWidgetDisable" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/F_userInput_button_delete"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:text="@string/F_userInput_button_delete"
                            android:textColor="@color/colorTextPrimary"
                            app:backgroundTint="@color/colorWidgetDisable" />
                    </LinearLayout><!-- End of content 4 -->

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout><!-- End of content -->
    </ScrollView>

</LinearLayout>